--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ html {
 
 body {
     background-color: LightGray;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    color: #838994;
+    letter-spacing: 0.03em;
+    -webkit-font-smoothing: antialiased;
 }
 
 div {
@@ -15,19 +20,17 @@ div {
 }
 
 .navbar {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #838994;
-    letter-spacing: 0.03em;
-    -webkit-font-smoothing: antialiased;
     background-color: #fff;
     height: 70px;
 }
 
-.navbar > .content {
-    width: 970px;
-    height: 70px;
+.content {
+    width: 970px;   
     margin: 0 auto;
+}
+
+.navbar > .content {
+    height: 70px;
     padding: 0px 15px;
 }
 
@@ -68,4 +71,29 @@ li.active {
 
 a {
     text-decoration: none;
+}
+
+.introduction {
+    padding-top: 275px; 
+    color: white;
+    text-align: center;
+    background-image: url('../images/first-background-copy.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45.938rem;
+}
+
+button {
+    display: block;
+    width: 155px;
+    background-color: #f15a29;
+    font-size: 16px;
+    color: white;
+    margin: 0 auto;
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 1rem 1.5rem;
+
 }
